--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,8 @@
     </style>
 </head>
 <body style="background-color: yellow;">
+
+    <!-- Header & Navigation -->
     <header>
         <nav>
             <a href="#home">Home</a>
@@ -31,16 +33,20 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+    <hr>
+
     <!-- HOME PAGE -->
     <h1 id="home">Dev Daxinkumar Patel</h1>
     <p>Aspiring Software Engineer</p>
     <img src="images/Photograph.jpg" height="100" width="100"><br>
     <a href="https://www.figma.com/design/v7oAom74sFxLaaf0JO8UvI/Untitled?node-id=166-11&t=7gRk34qloHiCHB6v-1">Download Resume</a>
     <hr>
+
     <!-- ABOUT ME -->
     <h2 id="about">About Me</h2>
     <p>My name is <b>Dev Daxinkumar Patel</b>. I have done by studies till 12th from <u>Saraswati International School</u>, Valsad. I am pursuing my <i>Engineering</i> from <u>CodingGita ( Swaminarayan University )</u>. I already have some experience in Python from my 11th-12th and right now I am <mark style="background-color: blue;">focusing on developing more skills</mark> like C, HTML, CSS, Figma, Github etc.</p>
     <hr>
+
     <!--EDUCATION -->
     <h2 id="education">Education</h2>
     <table>
@@ -69,26 +75,28 @@
             <td>ONGOING</td>
         </tr>
     </table>
+
     <!-- PROJECTS -->
     <h2 id="projects">Projects</h2>
     <ol>
         <li>
             <h3>South Gujarat Tourism</h3>
             <p>Explore some of the underrated and unexplored tourist attractions from the cities located in the South of Gujarat</p>
-            <a href="http://southgujarattourism.com/">View Project</a>
+            <a href="http://codinggita.com/">View Project</a>
         </li>
         <li>
             <h3>Attendance Tracker</h3>
             <p>Track the attendance of the students in your school/tution including face recognition, attendance calculator etc</p>
-            <a href="http://attendancetracker.com/">View Project</a>
+            <a href="http://codinggita.com/">View Project</a>
         </li>
         <li>
             <h3>Quiz Game</h3>
             <p>A fun quiz game with exciting in-game rewards with multiplayer, tournaments, daily rewards, points table and much more</p>
-            <a href="http://attendancetracker.com/">View Project</a>
+            <a href="http://codinggita.com/">View Project</a>
         </li>
     </ol>
     <hr>
+
     <!-- CERTIFICATES -->
     <h2 id="certificates">Certificates</h2>
     <ul>
@@ -97,6 +105,7 @@
         <li>Figma-CodingGita-2025</li>
     </ul>
     <hr>
+
     <!-- HOBBIES -->
     <h2 id="hobbies">Hobbies</h2>
     <ul>
@@ -105,6 +114,7 @@
         <li>Travelling  &starf;</li>
     </ul>
     <hr>
+
     <!--EXPERIENCE -->
     <h2 id="experience">Experience</h2>
     <section>
@@ -113,6 +123,7 @@
         <p>Participated in XYZ Hack 2026</p>
     </section>
     <hr>
+
     <!-- CONTACT -->
     <h2 id="contact">Contact Me</h2>
     <form>
@@ -136,8 +147,9 @@
     allowfullscreen>
     </iframe>
     <hr>
-    <!-- FOTTER -->
-    <fotter>
+
+    <!-- FOOTER -->
+    <footer>
         <p>Name : Dev Daxinkumar Patel</p>
         <p>Email : devpatel2007jan@gmail.com</p>
         <p>Phone : 7990267752</p>
@@ -146,6 +158,6 @@
         <p>Github : https://github.com/Dev1822</p>
         <hr>
         <p style="text-align: center;">© 2025 Dev Patel</p>
-    </fotter>
+    </footer>
 </body>
 </html>
